pico runtime services - make a dent into checkstyles